# pyhton_02

./: .env  app.py  database.py  main.py  package-lock.json  pyproject.toml  requirements.txt  trading.db  trading_engine.py  trading_engine_options.py  upstox_client.py  upstox_ws_client.py
static/css/: input.css  output.css
static/js/: app.js
templates/: index.html
